MDEV-35182 Unexpected error 131 "Command not supported by the engine" from storage engine mhnsw, crash in online_alter_end_trans

ONLINE ALTER didn't expect XA PREPARE to fail.
Mark rollback on failed prepare with the XA_ROLLBACK_ONLY state,
detect that in ONLINE ALTER